# EpiFitScout

./: README.md  pyproject.toml
conf/: config.yaml
data/SAbDab/: sabdab_metadata.csv
data/sabdab_chains.db/: db.list  metadata.json  pds.list
data/sabdab_chains.db/pds/: 8JXR_B_H.pds  8JXR_H_H.pds  8JXR_L_L.pds  8JXS_B_H.pds  8JXS_H_H.pds  8JXS_L_L.pds  8KEH_D_L.pds  8KEH_E_H.pds  8KEH_F_L.pds  8KEH_G_H.pds  8RTW_A_L.pds  8RTW_B_H.pds  8RTW_C_L.pds  8RTW_D_H.pds  8RTX_A_L.pds  8RTX_B_H.pds  8RTX_C_L.pds  8RTX_D_H.pds  8RTX_E_L.pds  8RTX_F_H.pds  8RVN_H_H.pds  8RVN_L_L.pds  8S4H_A_H.pds  8S4H_B_L.pds  8S4H_C_H.pds  8S4H_D_L.pds  8S4H_H_H.pds  8S4H_L_L.pds  8S4K_H_H.pds  8S4K_L_L.pds  8SOW_C_H.pds  8SOZ_C_H.pds  8TX3_E_H.pds  8TX3_F_H.pds  8TX3_H_H.pds  8TX3_J_L.pds  8TX3_K_L.pds  8TX3_L_L.pds  8TXU_E_H.pds  8TXU_F_H.pds  (+36 more)
epifitscout/: __init__.py
epifitscout/config/: __init__.py  schema.py
epifitscout/db/: __init__.py  chain_db_builder.py  pdb_list_reader.py  rcsb_downloader.py  sabdab_metadata.py
epifitscout/master/: parser.py  runner.py
epifitscout/pipeline/: search_pipeline.py
epifitscout/query/: __init__.py  builder.py
epifitscout/ranking/: ranker.py
epifitscout/scoring/: __init__.py  shape.py
epifitscout/types/: __init__.py  fragment.py  superposition.py
epifitscout/utils/: geometry.py  io.py
example/: _pymol_render.py  example_1a2y.ipynb  example_1a2y.py
example/test_run/: hits_summary.csv
run/: build_chain_db.py
