[project]
name = "epifitscout"
version = "0.1.0"
description = "Protein structural fragment search with epitope complementarity scoring"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "biopython>=1.83",
    "scipy>=1.12",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "requests>=2.31",
    "abnumber>=0.4.4",
    "py3dmol>=2.5.4",
    "pandas>=2.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["epifitscout"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=epifitscout --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
